[package]
name = "kvs"
version = "0.1.0"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
clap = "2.33.0"
structopt = "0.2.18"

serde = { version = "1.0", features = ["derive"] }
rmp = "^0.8"
byteorder = "1"
rmp-serde = "0.13.7"
